[project]
name = "multi-armed-bandit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "gym-bandits",
    "matplotlib>=3.10.7",
    "numpy<2.0",
]

[tool.uv.sources]
gym-bandits = { git = "https://github.com/JKCooper2/gym-bandits.git" }
